version/stable/_sources/api/ansys/mechanical/stubs/v242/Ansys/Mechanical/Graphics/SectionPlanes.rst.txt
.. vale off



:class:`SectionPlanes`
======================

.. py:class:: ansys.mechanical.stubs.v242.Ansys.Mechanical.Graphics.SectionPlanes(graphics: Ansys.Common.Interop.Gfx.IDSGraphics)

   Bases: :py:obj:`object`


   
   Represents the collection of section planes used by graphics
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: SectionPlanes

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Add`
            - Adds the given SectionPlane object to the collection to modify the view. Currently only 6 SectionPlane objects in the collection can be activated at once.
          * - :py:attr:`~Clear`
            - Clears the collection of all SectionPlane objects.
          * - :py:attr:`~Contains`
            - Returns true if the SectionPlane belongs to the collection.
          * - :py:attr:`~CopyTo`
            - CopyTo method.
          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~GetEnumerator`
            - GetEnumerator method.
          * - :py:attr:`~GetHashCode`
            - GetHashCode method.
          * - :py:attr:`~GetType`
            - GetType method.
          * - :py:attr:`~IndexOf`
            - Returns the index of the SectionObject if in the collection.  Returns -1 if not found.
          * - :py:attr:`~Remove`
            - Removes the requested SectionPlane from the collection.
          * - :py:attr:`~RemoveAt`
            - Removes the SectionPlane at the given index.
          * - :py:attr:`~ToString`
            - ToString method.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Capping`
            - Gets or Sets the Capping style of the Section Plane
          * - :py:attr:`~Count`
            - The number of section planes in the collection.
          * - :py:attr:`~IsReadOnly`
            - IsReadOnly property.
          * - :py:attr:`~Item`
            - Item property.
          * - :py:attr:`~ShowWholeElement`
            - Gets or Sets the Element Visibility of the Section Plane







Property detail
---------------
.. py:property:: Capping
   :type: Optional[Ansys.Mechanical.DataModel.Enums.SectionPlaneCappingType]


   
   Gets or Sets the Capping style of the Section Plane
















   ..
       !! processed by numpydoc !!

.. py:property:: Count
   :type: Optional[int]


   
   The number of section planes in the collection.
















   ..
       !! processed by numpydoc !!

.. py:property:: IsReadOnly
   :type: Optional[bool]


   
   IsReadOnly property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Item
   :type: Optional[Ansys.Mechanical.Graphics.SectionPlane]


   
   Item property.
















   ..
       !! processed by numpydoc !!

.. py:property:: ShowWholeElement
   :type: Optional[bool]


   
   Gets or Sets the Element Visibility of the Section Plane
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Add(sectionPlane: Ansys.Mechanical.Graphics.SectionPlane) -> None

   
   Adds the given SectionPlane object to the collection to modify the view. Currently only 6 SectionPlane objects in the collection can be activated at once.

   ..
       !! processed by numpydoc !!

.. py:method:: Clear() -> None

   
   Clears the collection of all SectionPlane objects.

   ..
       !! processed by numpydoc !!

.. py:method:: Contains(item: Ansys.Mechanical.Graphics.SectionPlane) -> bool

   
   Returns true if the SectionPlane belongs to the collection.

   ..
       !! processed by numpydoc !!

.. py:method:: CopyTo(array: Ansys.Mechanical.Graphics.SectionPlane, arrayIndex: int) -> None

   
   CopyTo method.

   ..
       !! processed by numpydoc !!

.. py:method:: Equals(obj: Any) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetEnumerator() -> Ansys.Mechanical.Graphics.SectionPlaneList

   
   GetEnumerator method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetHashCode() -> int

   
   GetHashCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetType() -> type

   
   GetType method.

   ..
       !! processed by numpydoc !!

.. py:method:: IndexOf(sectionPlane: Ansys.Mechanical.Graphics.SectionPlane) -> int

   
   Returns the index of the SectionObject if in the collection.  Returns -1 if not found.

   ..
       !! processed by numpydoc !!

.. py:method:: Remove(sectionPlane: Ansys.Mechanical.Graphics.SectionPlane) -> bool

   
   Removes the requested SectionPlane from the collection.

   ..
       !! processed by numpydoc !!

.. py:method:: RemoveAt(index: int) -> None

   
   Removes the SectionPlane at the given index.

   ..
       !! processed by numpydoc !!

.. py:method:: ToString() -> str

   
   ToString method.

   ..
       !! processed by numpydoc !!



.. vale on